Fix line breaks in message popup

--- a/src/style/custom-navbar/custom-navbar.scss
+++ b/src/style/custom-navbar/custom-navbar.scss
@@ -1003,6 +1003,7 @@ li.nav-item[report-id="playpage_dynamic"] .i-frame,
   justify-content: center;
   font-size: 9pt;
   border-radius: 6px;
+  white-space: nowrap;
 }
 
 // @media screen and (max-width: 1400px) {
